// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker default render Default date render -- not required 1`] = `
<div
  className="react-datepicker-wrapper"
>
  <div
    className="react-datepicker__input-container"
  >
    <input
      className="mui-mi-input-field"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter date and time"
      readOnly={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Datepicker default render Default date render -- required 1`] = `
<div
  className="react-datepicker-wrapper"
>
  <div
    className="react-datepicker__input-container"
  >
    <input
      className="mui-mi-input-field mui-mi-input-field-has-error"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter date and time"
      readOnly={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Datepicker default render Default datetime render -- not required 1`] = `
<div
  className="react-datepicker-wrapper"
>
  <div
    className="react-datepicker__input-container"
  >
    <input
      className="mui-mi-input-field"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter date and time"
      readOnly={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Datepicker default render Default datetime render -- required 1`] = `
<div
  className="react-datepicker-wrapper"
>
  <div
    className="react-datepicker__input-container"
  >
    <input
      className="mui-mi-input-field mui-mi-input-field-has-error"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter date and time"
      readOnly={false}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Datepicker passed props conditions allows custom class 1`] = `
<div
  className="react-datepicker-wrapper"
>
  <div
    className="react-datepicker__input-container"
  >
    <input
      className="mui-mi-input-field foo"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter date"
      readOnly={false}
      type="text"
      value="Jun 01, 2020"
    />
  </div>
</div>
`;
